--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ sniffio==1.3.1
 starlette==0.45.3
 typing_extensions==4.12.2
 uvicorn==0.34.0
+python-multipart==0.0.9
+sqlalchemy==2.0.27
+psycopg2-binary==2.9.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
