FIXED: HW№2-3: - location /api/; location api не работает; нагрузка

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,34 +1,35 @@
+upstream gunicorn {
+    server 127.0.0.1:8000;
+}
+
 server {
     listen 80;
     server_name localhost;
-
-    # API endpoints для FastAPI
+    
+    # Redirect root to web interface
+    location = / {
+        return 301 /web/;
+    }
+    
+    # API endpoints
     location /api/ {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://gunicorn/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Статические файлы и веб-интерфейс
+    # Web interface (SPA)
+    location /web/ {
+        alias /home/oleg/mai_projects/2025-MAI-Backend-O-Baranov/web/;
+        index index.html;
+        try_files $uri $uri/ /web/index.html;
+    }
+
+    # Static files (for demonstration)
     location /public/ {
         alias /home/oleg/mai_projects/2025-MAI-Backend-O-Baranov/public/;
-        index index.html;
-        try_files $uri $uri/ =404;
-    }
-
-    # Редирект с корня на /public/
-    location = / {
-        return 301 /public/;
-    }
-
-    # Проксирование остальных запросов на FastAPI
-    location / {
-        proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        autoindex on; # показывает содержимое директори
     }
 }
