HW№6: 1. Установить docker и docker-compose; 2. Создание Dockerfile для FastAPI приложения (У нас уже есть приложение. Не забудем обновить requirements.txt с установленными питоновскими пакетами. Нам нужно создать Dockerfile, который собрал бы образ нашего приложения. Важно помнить, что мы будем ходить в БД, как минимум.); 3. Создание docker-compose для проекта: *nginx; FastAPI-приложение; База данных; 3. Создание Makefile для проекта (Преподаватель должен иметь возможность, имея установленными только git, docker и docker-compose склонировать проект, выполнить команды make migrate и увидеть успешную миграцию.)

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
 upstream gunicorn {
-    server 127.0.0.1:8000;
+    server app:8000;
 }
 
 server {
@@ -18,18 +18,20 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
     }
 
     # Web interface (SPA)
     location /web/ {
-        alias /home/oleg/mai_projects/2025-MAI-Backend-O-Baranov/web/;
+        alias /app/web/;
         index index.html;
         try_files $uri $uri/ /web/index.html;
     }
 
-    # Static files (for demonstration)
+    # Static files
     location /public/ {
-        alias /home/oleg/mai_projects/2025-MAI-Backend-O-Baranov/public/;
-        autoindex on; # показывает содержимое директори
+        alias /app/public/;
+        autoindex on;
     }
 }
