--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
 annotated-types==0.7.0
-anyio==4.8.0
+anyio>=3.7.1,<4.0.0
 click==8.1.8
 dotenv==0.9.9
-fastapi==0.115.8
+fastapi==0.104.1
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 packaging==24.2
-pydantic==2.10.6
-pydantic_core==2.27.2
+pydantic==2.5.2
+pydantic-core==2.14.5
 python-dotenv==1.0.1
 sniffio==1.3.1
-starlette==0.45.3
+starlette>=0.27.0,<0.28.0
 typing_extensions==4.12.2
-uvicorn==0.34.0
-python-multipart==0.0.9
-sqlalchemy==2.0.27
+uvicorn==0.24.0
+python-multipart==0.0.6
+sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+alembic==1.12.1
+pydantic-settings==2.1.0
+email-validator==2.1.0.post1
